# dotfiles

./: .gitignore  README.md  install.conf.yaml
dots/: .ghci  .gitconfig  .haskeline
dots/bottom/: bottom.toml
dots/btop/: btop.conf
dots/direnv/: direnvrc
dots/discocss/: custom.css
dots/emacs/: .emacs
dots/fish/: config.fish  fish_variables  nnn.fish
dots/ghostty/: config
dots/hypr/: hyprland.conf
dots/i3/: config
dots/kitty/: kitty.conf
dots/mpv/: input.conf  mpv.conf
dots/niri/: binds.kdl  config.kdl  input.kdl  layout.kdl  outputs.kdl  rules.kdl  startup.kdl
dots/nix-direnv/: direnvrc
dots/nixpkgs/: config.nix
dots/noctalia/: config.toml
dots/opencode/: opencode.jsonc
dots/polybar/: config  config.ini  launch.sh
dots/rofi/: config.rasi
dots/sway/: config
dots/swaylock/: config
dots/vim/: .ideavimrc  .vimrc  init.vim
dots/waybar/: clock.json  config  style.css  workspaces.json
dots/xmonad/: xmonad-sky.cabal  xmonad.hs
dots/zed/: keymap.json  settings.json
nix/: emacs.nix  flake.nix
nix/hardware/: desktop.nix  laptop.nix  server.nix  work-laptop.nix  work.nix
nix/machines/: desktop.nix  laptop.nix  mac-vm.nix  macbook.nix  server.nix  work-laptop.nix  work.nix
nix/modules/: betterlockscreen.nix  bluetooth.nix  boot-efi.nix  boot-work.nix  cachix.nix  compositor.nix  discocss-fix.patch  emacs.nix  (+19 more)
scripts/: get-sha.clj  get_spotify_status.sh  keepass-rofi  mk-cadvisor.sh  mk-valheim-server.sh  nnn_unzip.sh  patch-binary.fish  patch-discord-krisp  scroll_spotify_status.sh  spotify.sh  twitch-rofi  twitch-video-rofi
(+80 files in other folders)
